# opencor-user-documentation

./: .gitmodules  CMakeLists.txt  Makefile  README.rst  build.py  clean  clean.bat  conf.py  make.bat  opencor  opencor.bat
src/: conf.py  conf.py.in  index.rst  knownLimitations.rst  licensing.rst  preferences.rst  pythonSupport.rst  supportedPlatforms.rst  uriScheme.rst
src/plugins/: index.rst
src/plugins/dataStore/: biosignalmlDataStore.rst  csvDataStore.rst
src/plugins/editing/: cellmlAnnotationView.rst  cellmlTextView.rst  rawCellmlView.rst  rawSedmlView.rst  rawTextView.rst
src/plugins/miscellaneous/: core.rst  helpWindow.rst  jupyterKernel.rst  pythonConsoleWindow.rst  pythonShell.rst  webBrowserWindow.rst
src/plugins/organisation/: fileBrowserWindow.rst  fileOrganiserWindow.rst  pmrWindow.rst  pmrWorkspacesWindow.rst
src/plugins/simulation/: simulationExperimentView.rst
src/plugins/solver/: cvodeSolver.rst  forwardEulerSolver.rst  fourthOrderRungeKuttaSolver.rst  heunSolver.rst  kinsolSolver.rst  secondOrderRungeKuttaSolver.rst
src/plugins/tools/: cellmlTools.rst
src/userInterfaces/: commandLineInterface.rst  commandLineInterfacePythonRelatedScripts.rst  graphicalUserInterface.rst  index.rst
styles/: cellmlText.css  opencor.css
